--- a/templates/base.html
+++ b/templates/base.html
@@ -124,7 +124,7 @@
     </script>
 
     <script src="{% static 'assets/js/menu_usuario.js' %}"></script>
-
+    <script src="{% static 'assets/js/multiselect.js' %}"></script>
 </body>
 
 </html>
